--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "pinia": "^2.1.7",
+    "quasar": "^2.16.4",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
